2005-08-26  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au.

	* lib/interval.h :

	  - Renamed macros for clarity.

	* lib/rel.c :
	* lib/rel.h :

	  - Cleanup of identifier names.

	  - Defined a new tbe_rel structure to encapsulate two interval id's
	    and a relset.

	  - Changed the interface of tbe_rel_normalise() to use the new
	    tbe_rel structure.

	* lib/network.c :
	* lib/network.h :

          - Changed the interface of the following functions to use the new
            tbe_rel structure:

            - tbe_net_add_rel_noprop()
            - tbe_net_add_rel()

	* test/test.c :

	  - Now uses the new interfaces and macros.

2005-08-25  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au.

	* lib/interval.h :

	  - A new header file that contains an interval structure (endpoints
	    and mask) plus some useful macros.

	* lib/Makefile.in :

	  - Include interval.h.

	* lib/network.c :
	* lib/network.h :

	  - Renamed tbe_net_rel() to tbe_net_get_rel().

	  - Removed tbe_net_normalise(). This is really a relation thing, and
	    as such, should be in rel.c.

	  - Renamed interval identifiers to int_id.

	  - Used the new tbe_interval structure where two endpoints and a mask
	    were previously used.

	  - In tbe_net_add_ep(), there's no need to check the validity of
	    endpoints or to see if at least one endpoint is given. These checks
	    are done by tbe_rel_calc().

	  - Inte tbe_net_add_rel(), we have to make sure that the given relset
	    is not empty.

	  - Cleanup of tbe_net_normalise().

	  - Cleanup. Renamed tbe_net_propagate[12]() to
	    tbe_net_trav_prop[12]().

	  - Added tbe_net_add_ep() which allows endpoints of intervals to be
	    defined. The new function tbe_net_propagate2() goes through all the
	    intervals in the network whose endpoints are defined and works out
	    the relations between them.

	  - Renamed all previous propagate functions and structures to
	    propagate1 to avoid confusion with the new propagate functions and